@@ -1,6 +1,7 @@
 4.1.6
 -----
 1. Hide menu and close buttons on now-playing screen if using "np-only" URL.
+2. Work-around volume control moving in desktop layout when toggle MAI button.
 
 4.1.5
 -----
